linux-2.6 (2.6.12-5) UNRELEASED; urgency=low

  * Change ARM to use GCC 3.3 to avoid FTBFS errors with GCC 4

  * Remove spurious double quote character from ia64 package descriptions.
    (dann frazier)

 -- dann frazier <dannf@debian.org>  Mon, 15 Aug 2005 17:20:15 -0600

linux-2.6 (2.6.12-4) unstable; urgency=low

  * Supply correct subarch values for the powerpc images.

 -- Bastian Blank <waldi@debian.org>  Mon, 15 Aug 2005 21:06:18 +0200

linux-2.6 (2.6.12-3) unstable; urgency=low

  * Added reference to old kernel-* package names to make
    transition a little more obvious to end users.
    A Dan Jacobson special. (Simon Horman) Closes: #321167

  * By the time this makes it into the archive, it will
    be handling kernel-image-2.6-* packages. (Simon Horman)
    Closes: #321867

  * Link palinfo statically on ia64. (dann frazier) (Closes: #321885)

  * [hppa] :
    - Add hppa arch specific patch.
    - Build-Depend on binutils-hppa64 and gcc-4.0-hppa64.
    (Kyle McMartin)

  * Fix permissions in source tarball. (Bastian Blank) (Closes: #322409)

  * Enable the CONFIG_IP_ADVANCED_ROUTER and related options on
    sparc64 to sync with other architectures. (Jurij Smakov)
    Closes: #321236

  * Include all executables as well as *.sh and *.pl files found in
    scripts directory in the headers package. (Bastian Blank)
    Closes: #322612, #322680, #322765

  * Include m68k headers into the arch-common headers package on
    powerpc and make sure that all the directories are linked to
    properly from the flavour-specific headers packages. (Jurij Smakov)
    Closes: #322610

  * [powerpc] Enabled the powerpc64 flavour, now that we have a real biarch
    toolchain in sid. Many thanks go to GOTO Masanori and Matthias Klose as
    well as any other who worked on the biarch toolchain to make this happen.

  * Added 2.6.12.5 (Simon Horman)
    - Fix BUG() is triggered by a call to set_mempolicy() with a negativ
      first argument.