@@ -61,6 +61,42 @@ Depends: linux-image-2.6-k7-smp
 Description: Linux kernel 2.6 image on AMD K7 SMP machines - transition package
  This package is for transition only.
 
+Package: kernel-image-2.6-itanium
+X-Version-Overwrite-Epoch: 1
+Architecture: ia64
+Section: base
+Priority: extra
+Depends: linux-image-2.6-itanium
+Description: Linux kernel 2.6 image on Itanium machines - transition package
+ This package is for transition only.
+
+Package: kernel-image-2.6-itanium-smp
+X-Version-Overwrite-Epoch: 1
+Architecture: ia64
+Section: base
+Priority: extra
+Depends: linux-image-2.6-itanium-smp
+Description: Linux kernel 2.6 image on multi-processor Itanium machines - transition package
+ This package is for transition only.
+
+Package: kernel-image-2.6-mckinley
+X-Version-Overwrite-Epoch: 1
+Architecture: ia64
+Section: base
+Priority: extra
+Depends: linux-image-2.6-mckinley
+Description: Linux kernel 2.6 image on Itanium II machines - transition package
+ This package is for transition only.
+
+Package: kernel-image-2.6-mckinley-smp
+X-Version-Overwrite-Epoch: 1
+Architecture: ia64
+Section: base
+Priority: extra
+Depends: linux-image-2.6-mckinley-smp
+Description: Linux kernel 2.6 image on multi-processor Itanium II machines - transition package
+ This package is for transition only.
+
 Package: kernel-image-powerpc
 X-Version-Overwrite-Epoch: 1
 Architecture: powerpc
