@@ -5,7 +5,10 @@ linux-2.6 (2.6.12-5) UNRELEASED; urgency=low
   * Remove spurious double quote character from ia64 package descriptions.
     (dann frazier)
 
- -- dann frazier <dannf@debian.org>  Mon, 15 Aug 2005 17:20:15 -0600
+  * Add transitional meta packages (kernel-image-2.6-*) for ia64.
+    (dann frazier)
+
+ -- dann frazier <dannf@debian.org>  Mon, 15 Aug 2005 17:24:52 -0600
 
 linux-2.6 (2.6.12-4) unstable; urgency=low
 
